hphp/test/zend/bad/ext/sockets/tests/socket_cmsg_rights.php.skipif
<?php
if (!extension_loaded('sockets')) {
die('skip sockets extension not available.');
}
if (strtolower(substr(PHP_OS, 0, 3)) == 'win') {
die('skip not for Microsoft Windows');
}